@@ -11,7 +11,11 @@ public class DataGenerators {
     @SubscribeEvent
     public static void gatherData(GatherDataEvent event) {
         DataGenerator generator = event.getGenerator();
-        generator.addProvider(new Recipes(generator));
-        generator.addProvider(new LootTables(generator));
+        if (event.includeServer()) {
+            generator.addProvider(new Recipes(generator));
+            generator.addProvider(new LootTables(generator));
+            generator.addProvider(new ItemTags(generator, event.getExistingFileHelper()));
+            generator.addProvider(new BlockTags(generator, event.getExistingFileHelper()));
+        }
     }
 }
